# log-effectful

./: .gitignore  CHANGELOG.md  Makefile  README.md  cabal.project  effectful-log-base.cabal  log-effectful.cabal
.github/workflows/: haskell-ci.yml
examples/: StdoutExample.hs
src/Effectful/: Log.hs
src/Effectful/Log/: Logger.hs
src/Effectful/Log/Backend/: LogList.hs  StandardOutput.hs  Text.hs
src/Effectful/Log/Backend/StandardOutput/: Bulk.hs
test/: Main.hs
tests/: Main.hs
