cabal-version:      3.0
name:               log-effectful
version:            0.0.1.0
homepage:
  https://github.com/haskell-effectful/log-effectful#readme

bug-reports:
  https://github.com/haskell-effectful/log-effectful/issues

author:             Dominik Peteler
maintainer:         Dominik Peteler
license:            BSD-3-Clause
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  LICENSE.md
  README.md

source-repository head
  type:     git
  location: https://github.com/haskell-effectful/log-effectful

common language
  ghc-options:        -Wall -Wcompat
  default-language:   Haskell2010
  default-extensions:
    DataKinds
    FlexibleContexts
    GADTs
    KindSignatures
    TypeOperators

library
  import:          language
  ghc-options:     -O2
  hs-source-dirs:  src
  exposed-modules:
    Effectful.Log
    Effectful.Log.Backend.LogList
    Effectful.Log.Backend.StandardOutput
    Effectful.Log.Backend.StandardOutput.Bulk
    Effectful.Log.Backend.Text
    Effectful.Log.Logger

  build-depends:
    , aeson
    , base            <=4.17
    , bytestring
    , effectful-core ^>=1.0.0.0
    , effectful-time
    , log-base        >=0.11.0.0
    , text
    , time

test-suite log-effectful-test
  import:         language
  type:           exitcode-stdio-1.0
  hs-source-dirs: examples test
  main-is:        Main.hs
  build-depends:
    , aeson
    , base
    , effectful
    , effectful-core
    , log-effectful
    , effectful-time
    , log-base
    , tasty
    , tasty-hunit
    , text

  other-modules:
    StdoutExample
    Utils

  ghc-options:    -rtsopts -threaded -with-rtsopts=-N
